# SimpleGF

./: .gitignore  CMakeLists.txt  readme.md
include/SimpleGF/graphics/: BaseVertexAttribData.h  Camera.h  Color.h  GraphicsCommon.h  MaterialArg.h  MaterialMap.h  Mesh.h  Shader.h  ShaderProgram.h  ShaderUniform.h  Texture2D.h  VertexAttribData.h  VertexIndexData.h
include/SimpleGF/utils/: Application.h  Window.h
resources/shaders/: default.frag  default.vert
src/: CMakeLists.txt  GLProgram.cpp  GLShader.cpp  Mesh.cpp  MeshRenderer.cpp  common.h  main.cpp
src/graphics/: BaseVertexAttribData.h  Camera.cpp  Camera.h  Color.cpp  Color.h  GraphicsAbstraction.h  GraphicsCommon.h  Image.cpp  Image.h  Material.cpp  Material.h  MaterialArg.h  MaterialMap.h  Mesh.cpp  Mesh.h  Model.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderUniform.h  Texture2D.cpp  Texture2D.h  VertexAttribData.h  VertexAttribData_Impl.h  VertexIndexData.cpp  VertexIndexData.h
src/math/: MathCommom.h
src/tests/: TestCases.cpp  Test_DrawCube.cpp  main.cpp
src/utils/: Application.cpp  Application.h  Input.cpp  Input.h  UtilsCommon.h  Window.cpp  Window.h
tests/: CMakeLists.txt
